@@ -1,3 +1,7 @@
+bobcat (2.07.03) (ISN)
+
+  * Repaired persistent bug in String::unescape
+
 bobcat (2.07.02)
 
   * Repaired a bug in converting escaped hexadecimal characters in
